--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="selectCamera">选择相机</string>
     <string name="frontCamera">前置相机</string>
     <string name="rearCamera">后置相机</string>
-    <string name="takePictureText">拍照</string>
+    <string name="takePictureText">人脸采集</string>
     <string name="dialogTitle">查验结果</string>
     <string name="dialogImageIdText">图片编号:</string>
     <string name="dialoglimitText">对比人数:</string>
