--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,11 +16,12 @@
 
     <string name="verificationResultText">对比结果: </string>
     <string name="verificationTimeText">对比时间: </string>
-    <string name="verificationTotalText">比对人数: </string>
+    <string name="verificationTotalText">比中数: </string>
     <string name="verificationSimilarityText">相似度: </string>
     <string name="verificationNameText">姓名: </string>
     <string name="verificationSexText">性别: </string>
     <string name="verificationNationText">民族: </string>
+    <string name="verificationNoteText">备注: </string>
 
     <string name="verificationTrue"> 通过 </string>
     <string name="verificationFalse">失败 </string>
